# jenqins

./: .gitignore  CMakeLists.txt  CommuniBot.cpp  CommuniBot.h  CommuniBot.kdev4  README  jenqins.kdev4  jenqins.service  main.cpp  todo.md
.kdev4/: CommuniBot.kdev4  _custom.kdev4  jenqins.kdev4
cmake_modules/: CommuniConfig.cmake
src/: CMakeLists.txt  botconnection.cpp  botconnection.h  botsession.cpp  botsession.h  ircbot.cpp  ircbot.h  main.cpp
src/modules/: botmodule.cpp  botmodule.h  echomodule.cpp  echomodule.h  greetmodule.cpp  greetmodule.h  helpmodule.cpp  helpmodule.h  memomodule.cpp  memomodule.h  messagemodule.cpp  messagemodule.h  topicmodule.cpp  topicmodule.h
